--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": "dbobr123",
+    "password": "",
     "database": "db_todo",
     "host": "127.0.0.1",
-    "port" : "3307",
+    "port" : "3306",
     "dialect": "mysql"
   },
   "test": {
